[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/player.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SphereShape" id=3]

radius = 1.0

[node name="Player" type="KinematicBody"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 2
collision_mask = 5
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

shape = SubResource( 1 )
disabled = false

[node name="MeshInstance" type="MeshInstance" parent="." index="1"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null

[node name="ReloadTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="BulletCooldown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="GetBulletTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HomeRange" type="Area" parent="." index="5"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="HomeRange" index="0"]

transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
shape = SubResource( 3 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]

[connection signal="timeout" from="BulletCooldown" to="." method="_on_BulletCooldown_timeout"]

[connection signal="timeout" from="GetBulletTimer" to="." method="_on_GetBulletTimer_timeout"]

[connection signal="area_entered" from="HomeRange" to="." method="_on_HomeRange_area_entered"]

[connection signal="area_exited" from="HomeRange" to="." method="_on_HomeRange_area_exited"]


